--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
     <div class="col-xs-12">
       <button id="getRandomQuote" class="btn btn-primary">Get Random Quote</button>
     </div>
+    <div id="tweet">
+      Tweet
+    </div>
   </div>
   <script src="scripts/index.js"></script>
 </body>
